--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "generate:proto": "npx pbjs -t static-module -w es6 -o src/MyModel.js src/MyModel.proto && npx pbts -o src/MyModel.d.ts src/MyModel.js"
     },
     "dependencies": {
+        "ag-charts-enterprise": "^11.2.1",
+        "ag-grid-community": "^33.2.1",
+        "ag-grid-enterprise": "^33.2.1",
+        "ag-grid-react": "^33.2.1",
         "pbf": "^4.0.1",
         "protobufjs": "^7.4.0",
         "protobufjs-cli": "^1.1.3",
