--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "generate:proto": "npx pbjs -t static-module -w es6 -o src/MyModel.js src/MyModel.proto && npx pbts -o src/MyModel.d.ts src/MyModel.js"
+        "generate:proto": "npx pbjs -t static-module -w es6 -o src/MyModel.js src/MyModel.proto && npx pbts -o src/MyModel.d.ts src/MyModel.js",
+        "prepare": "husky"
     },
     "dependencies": {
         "ag-charts-enterprise": "^11.2.1",
@@ -30,8 +31,16 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.0",
+        "prettier": "^3.5.3",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.24.1",
         "vite": "^6.2.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "prettier --write"
+        ]
     }
 }
