--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "generate:proto": "npx pbjs -t static-module -w es6 -o src/MyModel.js src/MyModel.proto && npx pbts -o src/MyModel.d.ts src/MyModel.js",
-        "prepare": "husky"
+        "prepare": "husky",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
     },
     "dependencies": {
         "ag-charts-enterprise": "^11.2.1",
