chore: rename project from my-vite-protobuf-benchmark to protododbench in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-vite-protobuf-benchmark",
+    "name": "protododbench",
     "private": true,
     "version": "0.0.0",
     "type": "module",
