--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "protobufjs": "^7.4.0",
         "protobufjs-cli": "^1.1.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^7.4.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
