feat: integrate Tailwind CSS and PostCSS; add utility functions and new UI components

--- a/package.json
+++ b/package.json
@@ -13,19 +13,31 @@
         "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
     },
     "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.6",
+        "@radix-ui/react-slot": "^1.1.2",
         "ag-charts-enterprise": "^11.2.1",
         "ag-grid-community": "^33.2.1",
         "ag-grid-enterprise": "^33.2.1",
         "ag-grid-react": "^33.2.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.486.0",
         "pbf": "^4.0.1",
         "protobufjs": "^7.4.0",
         "protobufjs-cli": "^1.1.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router-dom": "^7.4.1"
+        "react-hook-form": "^7.55.0",
+        "react-router-dom": "^7.4.1",
+        "tailwind-merge": "^3.0.2",
+        "tw-animate-css": "^1.2.5",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@tailwindcss/postcss": "^4.0.17",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
